some simple modify

--- a/区别.md
+++ b/区别.md
@@ -30,9 +30,10 @@
 
 ### 年龄/年级：四年级～五年级
 
+### 课程内容：
 用电脑的 __画笔__ “教”电脑画画
 
-*初步* 了解编程语言
+- *初步* 了解编程语言
 > 前进 fd  后退 bk 左转lt 右转rt 画圆 c,o
 #### 举例
 ![RUNBOO circle](/img/direct_circle.png)
@@ -52,9 +53,10 @@ for (int i = 0;i< 120; i++){
 ```
 > 教孩子怎么结构一个图形，怎么通过，计算机语言中最重要的部分之一 *循环*(loop)，理解如何通过循环来构建普通的图形。
 
-**简单** 的函数封装定义
+- **简单** 的函数封装定义
 > 把一个一直做的事情放在一起，不用每次都写
-#### 举例
+- 举例
+
 ![alt 属性文本](./img/ljx.png)
 
 > 每一个边一样，可以看成是六个相同部分的组合。
